--- a/.github/workflows/consume.yml
+++ b/.github/workflows/consume.yml
@@ -24,9 +24,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      # - uses: test-vinay/avo-internal-action@1.0.0
-      - uses: test-vinay/avo-private-action@1.0.0
+      # - uses: test-vinay/avo-private-action@1.0.0
+      - uses: test-vinay/avo-internal-action@1.0.0
         with:
           who-to-greet: 'Mona the Octocat'
- #     - name: Test Action
- #       uses: vinay-personal-org/test-action@v1
+      - name: Test Action
+        uses: vinay-personal-org/test-action@v1
